--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="right-section">
-                <img src="images/dv-img.png">
+                <img src="images/img.png">
             </div>
         </section>
         <!-- third section -->
@@ -313,7 +313,7 @@
         <!-- forth section -->
         <section class="forth-section" id="contact">
             <div class="contact-img">
-                <img src="images/dv-img.png">
+                <img src="images/ranjeet-img.png">
             </div>
             <div class="contact-details">
                 <h1>Contact Me</h1>
@@ -333,7 +333,7 @@
                     <ul>
                         <li><a href="#first-section">Overview</a></li>
                         <li><a href="#project">Projects</a></li>
-                        <li><a href="#">Resume</a></li>
+                        <li><a href="images/Resume.pdf" download="Ranjeet_Resume.pdf">Resume</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
