--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
                         turn ideas into digital reality</p>
                 </div>
                 <div class="buttons">
-                    <a href="images/Resume.pdf" download="Ranjeet_Resume.pdf"><button class="download-cv-btn">Download CV</button></a>
+                    <a href="images/Resume.pdf" download="Ranjeet_Resume.pdf"><button class="download-cv-btn">Download
+                            CV</button></a>
                     <a href="#contact"><button class="contact-btn">Contact Me</button></a>
                 </div>
             </div>
             <div class="right-section">
-                <img src="images/img.png">
+                <img src="images/ranjeet-img.jpg">
             </div>
         </section>
         <!-- third section -->
@@ -186,7 +187,8 @@
                             </div>
                         </div>
                         <div class="web-btn">
-                            <a href="https://ranjeetboy-r.github.io/RunPlayerApp/"><button class="view-btn">View</button></a>
+                            <a href="https://ranjeetboy-r.github.io/RunPlayerApp/"><button
+                                    class="view-btn">View</button></a>
                         </div>
                         <div id="up">^</div>
                         <div class="web-name">Run App</div>
@@ -211,7 +213,8 @@
                         </div>
 
                         <div class="web-btn">
-                            <a href="https://ranjeetboy-r.github.io/ToDo-app/"><button class="view-btn">View</button></a>
+                            <a href="https://ranjeetboy-r.github.io/ToDo-app/"><button
+                                    class="view-btn">View</button></a>
                         </div>
                         <div id="up">^</div>
                         <div class="web-name">To-Do App</div>
@@ -235,7 +238,8 @@
                             </div>
                         </div>
                         <div class="web-btn">
-                            <a href="https://ranjeetboy-r.github.io/New-weather-app/"><button class="view-btn">View</button></a>
+                            <a href="https://ranjeetboy-r.github.io/New-weather-app/"><button
+                                    class="view-btn">View</button></a>
                         </div>
                         <div id="up">^</div>
                         <div class="web-name">Weather App</div>
@@ -259,7 +263,8 @@
                             </div>
                         </div>
                         <div class="web-btn">
-                            <a href="https://ranjeetboy-r.github.io/LoginApp/"><button class="view-btn">View</button></a>
+                            <a href="https://ranjeetboy-r.github.io/LoginApp/"><button
+                                    class="view-btn">View</button></a>
                         </div>
                         <div id="up">^</div>
                         <div class="web-name">Login Form</div>
@@ -284,10 +289,11 @@
                             </div>
                         </div>
                         <div class="web-btn">
-                            <a href="https://ranjeetboy-r.github.io/MobileShop/"><button class="view-btn">View</button></a>
+                            <a href="https://ranjeetboy-r.github.io/MobileShop/"><button
+                                    class="view-btn">View</button></a>
                         </div>
                         <div id="up">^</div>
-                         <div class="web-name">Rk Mobile Shop</div>
+                        <div class="web-name">Rk Mobile Shop</div>
                     </div>
                 </div>
             </div>
@@ -313,7 +319,7 @@
         <!-- forth section -->
         <section class="forth-section" id="contact">
             <div class="contact-img">
-                <img src="images/ranjeet-img.png">
+                <img src="images/ranjeet-img.jpg">
             </div>
             <div class="contact-details">
                 <h1>Contact Me</h1>
